--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -28,7 +28,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
-                href="https://mikhael-yakymets.github.io/project-CodeNomads/"
+                href="https://github.com/Mikhael-Yakymets/project-CodeNomads"
                 target="_blank"
                 class="projects-btn"
                 rel="noopener noreferrer nofollow"
@@ -92,7 +92,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
-                href="https://mikhael-yakymets.github.io/project-CodeNomads/"
+                href="https://github.com/Mikhael-Yakymets/project-CodeNomads"
                 target="_blank"
                 class="projects-btn"
                 rel="noopener noreferrer nofollow"
@@ -156,7 +156,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
-                href="https://mikhael-yakymets.github.io/project-CodeNomads/"
+                href="https://github.com/Mikhael-Yakymets/project-CodeNomads"
                 target="_blank"
                 class="projects-btn"
                 rel="noopener noreferrer nofollow"
@@ -202,7 +202,7 @@
           class="btn-arrow prev-button-js-prj base-button-style"
           aria-label="Previous slide"
         >
-          <svg class="swiper-left-arrow" width="32" height="32">
+          <svg class="swiper-left-arrow" width="25" height="24">
             <use href="./img/icons.svg#icon-arrow-narrow-left"></use>
           </svg>
         </button>
@@ -210,7 +210,7 @@
           class="btn-arrow next-button-js-prj base-button-style"
           aria-label="Next slide"
         >
-          <svg class="swiper-right-arrow" width="32" height="32">
+          <svg class="swiper-right-arrow" width="25" height="224">
             <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
           </svg>
         </button>
