--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,6 +1,6 @@
 <section class="section-together" id="work-together">
-  <div class="container work-together-container">
-    <div class="work-together-title-wrapper">
+  <div class="container">
+    <h3 class="work-title">
       <picture>
         <source
           media="(min-width: 768px)"
@@ -24,11 +24,12 @@
           height="70"
         />
       </picture>
-      <h3 class="work-title">
-        let's <span class="title-part">work</span>
-        <span class="title-next-line">together</span>
-      </h3>
-    </div>
+      <div class="work-together-title-box">
+        let's
+        <span class="work-together-title-part">work</span>
+      </div>
+      <span class="title-next-line">together</span>
+    </h3>
 
     <form class="work-together-form">
       <div class="work-together-form-box">
