--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -45,6 +45,7 @@ form input {
     outline: none;
     padding-bottom: 20px;
     background-color: transparent;
+    text-overflow: ellipsis;
     border: none;
     border-bottom: 1px solid rgba(250, 250, 250, 0.2);
     font-weight: 500;
