modified_style_next_skill_buuton

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -134,7 +134,7 @@
       <!-- Next skill button -->
       <div class="swiper-skills-button-next">
         <svg class="icon-skills-button" width="28" height="28">
-          <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
+          <use href="../img/icons.svg#icon-arrow-narrow-right"></use>
         </svg>
       </div>
     </div>
