--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -247,6 +247,7 @@
 /* #region Swiper-section */
 
 /*Mobile*/
+
 .about-me-swiper {
   display: flex;
   align-items: center;
@@ -307,8 +308,14 @@
 
 /* Styles for button-icon */
 .icon-skills-button {
-  stroke: rgba(250, 250, 250, 0.6);
-  fill: #fafafa;
+  fill: #3b3b3b;
+  transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.swiper-skills-button-next:hover {
+  color: #4070eb;
+  box-shadow: 1px 2px 2px #4070eb;
+  border: 1px solid rgba(250, 250, 250, 0.2);
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
 
