--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -15,9 +15,8 @@
 
 .btn-arrow:hover,
 .btn-arrow:focus {
-  box-shadow: rgba(64, 112, 235, 0.25) 0px 50px 100px -20px,
-    rgba(64, 112, 235, 0.3) 0px 30px 60px -30px,
-    rgba(64, 112, 235, 0.35) 0px -2px 6px 0px inset;
+  color: #4070eb;
+  box-shadow: 1px 1px 2px #4070eb;
   transition: box-shadow 250ms ease;
 }
 
