--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -132,11 +132,11 @@
       </div>
 
       <!-- Next skill button -->
-      <div class="swiper-skills-button-next">
+      <button class="swiper-skills-button-next">
         <svg class="icon-skills-button" width="28" height="28">
           <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
         </svg>
-      </div>
+      </button>
     </div>
   </div>
 </section>
