--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -43,15 +43,17 @@
         <div class="mobile-menu-nav-wrapper">
           <ul class="mobile-nav-list">
             <li class="mobile-nav-list-item">
-              <a href="#about-me">About me</a>
+              <a class="mobile-nav-list-item-link" href="#about-me">About me</a>
             </li>
             <li class="mobile-nav-list-item">
-              <a href="#benefits">Benefits</a>
+              <a class="mobile-nav-list-item-link" href="#benefits">Benefits</a>
             </li>
             <li class="mobile-nav-list-item">
-              <a href="#projects">Projects</a>
+              <a class="mobile-nav-list-item-link" href="#projects">Projects</a>
             </li>
-            <li class="mobile-nav-list-item"><a href="#faq">FAQ</a></li>
+            <li class="mobile-nav-list-item">
+              <a class="mobile-nav-list-item-link" href="#faq">FAQ</a>
+            </li>
           </ul>
         </div>
         <a class="order-project-btn" href="#work-together">Order the project</a>
