--- a/src/css/header.css
+++ b/src/css/header.css
@@ -31,6 +31,12 @@
   align-items: center;
 }
 
+.header-burger-btn:hover,
+.header-burger-btn:focus {
+  transform: scale(1.07);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header-burger-ico {
   display: block;
   stroke-width: 3px;
@@ -74,10 +80,20 @@
   pointer-events: none;
 }
 
+@media only screen and (max-width: 374.98px) and (min-resolution: 192dpi) {
+  .mobile-menu {
+    background-image: url('../img/herophoto/Glasseffect_mob@2x.png');
+  }
+}
+
 .mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events: auto;
+  pointer-events: initial;
+  transform: translateX(0);
+  z-index: 1000;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 body.no-scroll {
@@ -85,19 +101,41 @@ body.no-scroll {
 }
 
 .mobile-menu-container {
-  width: 100%;
+  min-width: 320px;
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 64px;
   height: 100%;
-  padding: 32px 16px;
   display: flex;
   flex-direction: column;
   position: relative;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
 }
+
+/* animation Open */
+.mobile-menu.is-open .mobile-menu-container {
+  transform: translateY(0);
+}
+
 .mobile-menu-close-btn {
   position: absolute;
-  top: 30px;
-  right: 32px;
+  top: 34px;
+  right: 0px;
   background-color: transparent;
   border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  padding: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
+  transform: scale(1.2);
 }
 
 .mobile-menu-wrapper {
@@ -125,22 +163,35 @@ body.no-scroll {
   align-items: center;
 }
 
-.mobile-nav-list-item a {
-  text-decoration: none;
+.mobile-nav-list-item-link {
   color: white;
   font-size: 16px;
   font-weight: 500;
   position: relative;
+  text-decoration: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-nav-list-item a::after {
+.mobile-nav-list-item-link::after {
   content: '';
   position: absolute;
-  bottom: -2px;
   left: 0;
+  bottom: -3px;
   width: 100%;
-  height: 1px;
+  height: 2px;
   background-color: white;
+  transition: background-color 250ms ease-in-out;
+}
+
+.mobile-nav-list-item-link:hover::after,
+.mobile-nav-list-item-link:focus::after {
+  background-color: #4070eb;
+}
+
+.mobile-nav-list-item-link:hover,
+.mobile-nav-list-item-link:focus {
+  transform: scale(1.07);
+  color: #4070eb;
 }
 
 .order-project-btn {
@@ -162,6 +213,14 @@ body.no-scroll {
 .order-project-btn:hover,
 .order-project-btn:focus {
   background-color: #4070eb;
+  outline: none;
+}
+
+.order-project-btn:active {
+  background-color: #0041e8;
+}
+
+.order-project-btn:focus-visible {
   outline: none;
 }
 /* #endregion Mobile Menu */
@@ -210,19 +269,35 @@ body.no-scroll {
     background-color: transparent;
     border: none;
     padding-top: 10px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  .header-nav-menu-btn:hover,
+  .header-nav-menu-btn:focus {
+    transform: scale(1.07);
+    color: #4070eb;
+  }
+
   .header-nav-list {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
     gap: 5px;
+    transition: opacity 750ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .header-nav-list-item {
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
     color: #fafafa;
+    transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-nav-list-item:hover,
+  .header-nav-list-item:focus {
+    transform: scale(1.07);
+    color: #4070eb;
   }
   /* #endregion Menu-1 */
 }
