--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -61,6 +61,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: box-shadow 0.3s ease;
 }
 
 .button-next:disabled,
@@ -70,20 +71,31 @@
   pointer-events: none;
 }
 
-.button-prev:hover,
+/* .button-prev:hover,
 .button-next:hover,
 .button-next:focus,
 .button-prev:focus {
-    box-shadow: rgba(64, 112, 235, 0.25) 0px 50px 100px -20px,
-        rgba(64, 112, 235, 0.3) 0px 30px 60px -30px,
-        rgba(64, 112, 235, 0.35) 0px -2px 6px 0px inset;
-      transition: box-shadow 250ms ease;
-}
+  box-shadow: rgba(64, 112, 235, 0.25) 0px 50px 100px -20px,
+    rgba(64, 112, 235, 0.3) 0px 30px 60px -30px,
+    rgba(64, 112, 235, 0.35) 0px -2px 6px 0px inset;
+  transition: box-shadow 250ms ease;
+} */
 
 .prev-icon,
 .next-icon {
   fill: #fafafa;
   stroke: #fafafa;
+  transition: transform 0.3s ease;
+}
+
+.prev-icon:hover,
+.prev-icon:focus {
+  transform: scale(1.2);
+}
+
+.next-icon:hover,
+.next-icon:focus {
+  transform: scale(1.2);
 }
 
 .button-prev:disabled .prev-icon,
