--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
 <section class="hero-section" id="hero">
   <div class="container hero-content-container">
     <h1 class="hero-title">
-      <span>Hello.</span>
+      Hello.
       <span>I’m Fullstack developer Lloyd Jefferson.</span>
     </h1>
 
