--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -10,7 +10,9 @@
   position: relative;
 }
 
-@media (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .hero-section {
     background-image: url('../img/herophoto/Glasseffect_mob@2x.png');
   }
@@ -95,7 +97,8 @@
   }
 }
 
-@media only screen and (min-width: 768px) and (min-resolution: 192dpi),
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero-section {
     background-image: url('../img/herophoto/Glasseffect_tab@2x.png');
@@ -137,7 +140,8 @@
   }
 }
 
-@media only screen and (min-width: 1440px) and (min-resolution: 192dpi),
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero-section {
     background-image: url('../img/herophoto/Hero_desc@2x.png');
