--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -37,7 +37,7 @@
         </picture>
       </div>
     </div>
-    <div class="about-me-accordion">
+    <div class="about-me-accordion container">
       <ul class="accordion-container" id="accordion-about">
         <li class="ac active">
           <h3 class="ac-header">
