--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,38 +1,27 @@
 /* #region Mobile Hero */
 
 .hero-section {
-  background-image: linear-gradient(
-      90deg,
-      #1c1d20 49.68%,
-      #001958 67.73%,
-      #0041e8 100%
-    ),
-    url('../img/herophoto/Glasseffect_mob@1x.png');
-  background-size: cover;
+  background-image: url('../img/herophoto/glasseffect_mob@1x.png');
+  padding-top: 282px;
+  padding-bottom: 32px;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-
+  background-size: cover;
   position: relative;
-  padding-top: 281px;
-  padding-bottom: 32px;
 }
 
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url('../img/herophoto/Glass\ effect_mob@2x.png');
+    background-image: url('../img/herophoto/glasseffect_mob@2x.png');
   }
 }
 
 .hero-content-container {
   display: flex;
   flex-direction: column;
-}
-
-.hero-title span {
-  display: block;
+  gap: 212px;
 }
 
 .hero-title {
@@ -42,96 +31,100 @@
   letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #fafafa;
-
   margin: 0 auto;
-  margin-bottom: 212px;
-  max-width: 343px;
+}
+
+.hero-title span {
+  display: block;
 }
 
 .hero-socials-list {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   gap: 4px;
+  row-gap: 10px;
+  margin-top: -100px;
 }
 
 .hero-socials-link {
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: -0.02em;
-  color: #fafafa;
-
-  border: 1px solid rgba(250, 250, 250, 0.2);
-  border-radius: 60px;
-
   display: flex;
   justify-content: center;
-  align-items: center;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 60px;
   padding: 10px 12px;
   width: 37px;
   height: 37px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  font-weight: 500;
+  font-size: 14px;
+  color: #fafafa;
+  transition: all 0.2s ease-in-out;
+}
+
+.hero-socials-link.email {
+  color: #fafafa;
+  width: 178px;
 }
 
 .hero-socials-link:hover,
-.hero-socials-link:focus {
+.hero-socials-link.email:hover,
+.hero-socials-link:focus,
+.hero-socials-link.email:focus {
   color: #4070eb;
   box-shadow: 1px 1px 2px #4070eb;
 }
 
-.hero-socials-link.email {
-  width: 178px;
+@media only screen and (min-width: 359px) {
+  .hero-socials-list {
+    margin-top: -50px;
+  }
+}
+
+@media only screen and (min-width: 374px) {
+  .hero-socials-list {
+    margin-top: 0px;
+  }
 }
 
 /* #region Tablet Hero */
 
 @media only screen and (min-width: 768px) {
   .hero-section {
-    background-image: linear-gradient(
-        90deg,
-        #1c1d20 49.68%,
-        #001958 67.73%,
-        #0041e8 100%
-      ),
-      url('../img/herophoto/Glasseffect_tab@1x.png');
+    background-image: url('../img/herophoto/glasseffect_tab@1x.png');
     padding-top: 300px;
     padding-bottom: 32px;
   }
 
-  @media only screen and (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero-section {
-      background-image: url('../img/herophoto/Glasseffect_tab@2x.png');
-    }
+  .hero-content-container {
+    gap: 186px;
   }
 
   .hero-title {
-    font-weight: 500;
     font-size: 90px;
-
-    max-width: 632px;
-    margin-bottom: 187px;
   }
 
   .hero-socials-list {
-    justify-content: flex-end;
-    align-items: flex-end;
-    gap: 8px;
+    justify-content: end;
   }
 
   .hero-socials-link {
-    font-weight: 500;
-    font-size: 16px;
-
-    padding: 18px 20px;
     width: 55px;
     height: 55px;
+    padding: 18px;
+    font-size: 16px;
   }
 
   .hero-socials-link.email {
     width: 224px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url('../img/herophoto/glasseffect_tab@2x.png');
+    }
   }
 }
 
@@ -139,29 +132,28 @@
 
 /* #region Desctop Hero */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1440px) {
   .hero-section {
-    background-image: linear-gradient(
-        90deg,
-        #1c1d20 49.68%,
-        #001958 67.73%,
-        #0041e8 100%
-      ),
-      url('../img/herophoto/Glasseffect_desc@1x.png');
+    background-image: url('../img/herophoto/hero_desc@1x.png');
+    padding-top: 300px;
+    padding-bottom: 32px;
   }
 
-  @media only screen and (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero-section {
-      background-image: url('../img/herophoto/Glasseffect_desc@2x.png');
-    }
+  .hero-content-container {
+    gap: 242px;
   }
 
   .hero-title {
     max-width: 1084px;
     margin: 0 auto;
-    margin-bottom: 243px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url('../img/herophoto/hero_desc@2x.png');
+    }
   }
 }
 
